# cognitive-sparks

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  claude_code_analysis.md
experiments/: run_experiments.py
experiments/results/: experiment_20260404_080207.json
src/sparks/: api.py  autonomic.py  checkpoint.py  circuit.py  cli.py  cost.py  engine.py  llm.py  loop.py  meta.py
