[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitive-sparks"
version = "1.0.0"
description = "13 cognitive primitives that teach AI to think — not just compute."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "PROVE1352" },
]
keywords = [
    "ai", "llm", "cognitive-architecture", "thinking-tools",
    "neural-circuit", "reasoning", "agents", "neuroscience",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/PROVE1352/cognitive-sparks"
Repository = "https://github.com/PROVE1352/cognitive-sparks"
Documentation = "https://github.com/PROVE1352/cognitive-sparks/wiki"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0"]
google = ["google-genai>=1.0"]
all = ["anthropic>=0.40.0", "openai>=1.0", "google-genai>=1.0"]

[project.scripts]
sparks = "sparks.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sparks"]
